apps/openvpn/openvpn-openvpn-as-lb-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: openvpn-openvpn-as-lb-udp
  namespace: openvpn
spec:
  type: LoadBalancer
  loadBalancerIP: 10.17.12.206
  selector:
    app.kubernetes.io/instance: openvpn
    app.kubernetes.io/name: openvpn-as
  ports:
  - name: vpn-udp
    port: 1194
    targetPort: vpn-udp
    protocol: UDP
