apps/openvpn/vpn-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vpn-public-access
  namespace: openvpn
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`vpn.hephy.pro`)
    services:
    - kind: Service
      name: ingress-internal-ingress-nginx-controller
      namespace: ingress-nginx
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: vpn-public-access
  namespace: openvpn
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`vpn.hephy.pro`)
    services:
    - kind: Service
      name: ingress-internal-ingress-nginx-controller
      namespace: ingress-nginx
      port: 443
  tls:
    passthrough: true
